--- a/src/public/styles/pages/booking/detail.css
+++ b/src/public/styles/pages/booking/detail.css
@@ -122,14 +122,17 @@ a {
     background-color: var(--primary-color-4);
     font-size: 0.875rem;
     color: var(--white);
+    border: none;
 }
 
 .detail__btn:hover {
     color: var(--white);
+    box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.2), 0 0 2px 0 rgba(0, 0, 0, 0.2);
 }
 
 .detail__contact button {
-    width: 200px;
+    width: max-content;
+    border: none;
 }
 
 .detail__help div {
