--- a/src/views/components/noti-item-account.ejs
+++ b/src/views/components/noti-item-account.ejs
@@ -1,5 +1,5 @@
 <div class="noti-item__block" style="background: <%= (noti.usernoti_is_read == 0) ? '#00696D1A' : 'white' %>">
-	<img src="/imgs/user/<%=user.avatar%>" alt="img" class="noti-item__img">
+	<img src="/imgs/setting.jpg" alt="img" class="noti-item__img">
 	<form class="noti-item__main">
 		<input type="hidden" name="noti <%= index %>" value="<%=noti.noti_id%>">
 		<div>
