--- a/src/views/components/room.ejs
+++ b/src/views/components/room.ejs
@@ -74,7 +74,7 @@
 						<% } %>
 						<p class="room__price">VND <%= room.room_cost_after_currency %></p>
 						<p class="room__unit">/phòng/đêm</p>
-						<button type="button" class="btn btn-room-modal" data-bs-toggle="modal" data-bs-target="#room-detail">Xem chi tiết phòng</button>
+						<button type="button" class="btn-room-modal" data-bs-toggle="modal" data-bs-target="#room-detail">Xem chi tiết phòng</button>
 					</div>
 				</div>
 			</div>
