--- a/src/views/pages/booking/success.ejs
+++ b/src/views/pages/booking/success.ejs
@@ -49,11 +49,11 @@
 			</div>
 
 			<div class="order-save">
-				<button type="button" class="btn order-btn" data-bs-toggle="modal" data-bs-target="#fail-modal">
+				<button type="button" class="order-btn" data-bs-toggle="modal" data-bs-target="#fail-modal">
 					<span class="material-symbols-outlined">print</span>
 					<p>In xác nhận đầy đủ</p>
 				</button>
-				<button type="button" class="btn order-btn" data-bs-toggle="modal" data-bs-target="#fail-modal">
+				<button type="button" class="order-btn" data-bs-toggle="modal" data-bs-target="#fail-modal">
 					<span class="material-symbols-outlined">download</span>
 					<p>Lưu xác nhận vào điện thoại</p>
 				</button>
@@ -93,7 +93,7 @@
 							<p><%= data[0].book_num_room %> phòng</p>
 						</div>
 					</div>
-					<a href="/booking/detail" class="btn order-btn" role="button">Xem chi tiết</a>
+					<a href="/booking/detail" class="order-btn" role="button">Xem chi tiết</a>
 				</div>
 			</div>
 		</section>
@@ -125,7 +125,7 @@
 						<p>Giờ đây bạn có thể chỉnh sửa hoặc hủy đặt phòng cho đến khi nhận phòng. </p>
 					</div>
 				</div>
-				<button type="button" class="btn order-btn" data-bs-toggle="modal" data-bs-target="#fail-modal">Tải ứng dụng</button>
+				<button type="button" class="order-btn" data-bs-toggle="modal" data-bs-target="#fail-modal">Tải ứng dụng</button>
 			</div>
 		</section>
 	</main>
