--- a/src/views/pages/notifications/account-update.ejs
+++ b/src/views/pages/notifications/account-update.ejs
@@ -27,7 +27,7 @@
 	<main class="nofi-container">
 		<aside class="aside-wrapper">
 			<div class="aside-wrapper__aside-info">
-				<img class="aside-wrapper__aside-avatar" src="/imgs/avatar.png" alt="avatar" />
+				<img class="aside-wrapper__aside-avatar" src="/imgs/user/<%=user.avatar%>" alt="avatar" />
 				<div class="aside-wrapper__aside-title">
 					<p>Thông báo</p>
 				</div>
