--- a/src/public/styles/components/comment.css
+++ b/src/public/styles/components/comment.css
@@ -13,7 +13,7 @@
 
 .comment-wrapper p {
     width: 100%;
-    height: 100%;
+    height: max-content;
     font-size: 16px;
     font-weight: 400;
     padding: 0;
