--- a/src/public/styles/components/review-popup.css
+++ b/src/public/styles/components/review-popup.css
@@ -97,7 +97,7 @@
 
 .counter--wraper {
     display: flex;
-    width: 100px;
+    width: max-content !important;
     height: 58px;
     padding: 10px;
     border: 1px solid var(--dark-gray);
@@ -133,6 +133,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .counter--wraper span {
+    padding: 8px;
     font-size: 22px;
     font-weight: 700;
     margin-left: 2px;
@@ -168,7 +169,7 @@ input[type="number"]::-webkit-outer-spin-button {
     height: 224px;
     padding: 10px;
     z-index: 1;
-    /* Đặt z-index để đặt lớp input trên placeholder */
+    resize: none;
 }
 
 .input--detail:focus+.custom-input::before {
