--- a/src/public/styles/pages/booking/cancellation.css
+++ b/src/public/styles/pages/booking/cancellation.css
@@ -19,7 +19,6 @@ body {
     margin: 12px auto;
     display: flex;
     justify-content: space-around;
-    /* gap: 12px; */
     box-sizing: border-box;
     padding: 20px;
     border: 1px solid var(--outline-variant);
@@ -144,7 +143,7 @@ a.cancel__button--submit2:hover {
     gap: 24px;
     border-radius: 10px;
     background: var(--white);
-    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border: 1px solid var(--outline-variant);
 }
 
 .extend-content h2 {
