--- a/src/views/components/search-result-sale.ejs
+++ b/src/views/components/search-result-sale.ejs
@@ -12,8 +12,11 @@
 				<p class="result-block__name"><%= result.acco_name %></p>
 				<!-- Đánh giá 5 sao -->
 				<div class="result-block__rate-star">
-					<% for (let i = 0; i < result.acco_star; i++) { %>
-					<span class="material-symbols-outlined">star</span>
+					<% for (let i=0; i < data[0].acco_star; i++) { %>
+					<span class="material-symbols-outlined" style="font-variation-settings: 'FILL' 1">star</span>
+					<% } %>
+					<% for (let i=0; i < 5 - (data[0].acco_star); i++) { %>
+					<span class="material-symbols-outlined" style="font-variation-settings: 'FILL' 0">star</span>
 					<% } %>
 				</div>
 				<div class="result-block__extensions">
