--- a/src/views/pages/search/detail.ejs
+++ b/src/views/pages/search/detail.ejs
@@ -55,7 +55,7 @@
 					</div>
 				</div>
 				<div class="title__btn">
-					<a class="btn" href="#room-list" role="button">Chọn phòng</a>
+					<a href="#room-list" role="button">Chọn phòng</a>
 				</div>
 			</div>
 		</section>
@@ -102,7 +102,7 @@
 				<% }) %>
 				<h2 class="room-list__local-price">Tổng tiền: <span class="highlight">VND <span class="total-price">0</span></span> </h2>
 				<div class="room-list__submit">
-					<button type="submit" class="btn room-list__submit-button">Đặt phòng</button>
+					<button type="submit" class="room-list__submit-button">Đặt phòng</button>
 				</div>
 			</form>
 		</section>
