Fix search bar required

--- a/src/views/components/search-bar.ejs
+++ b/src/views/components/search-bar.ejs
@@ -10,7 +10,7 @@
 			<span class="material-symbols-outlined icon--filled"> calendar_month </span>
 			<input type="hidden" name='checkin' value="">
 			<input type="hidden" name='checkout' value="">
-			<input class="input_address" id="dateRange" type="text" value="" placeholder="Ngày nhận - Ngày trả" />
+			<input class="input_address" id="dateRange" type="text" value="" placeholder="Ngày nhận - Ngày trả" required/>
 		</div>
 
 		<div class="search-address search-address--dropdown" style="border-left: 1px solid #90a6b1">
