--- a/src/views/pages/booking/information.ejs
+++ b/src/views/pages/booking/information.ejs
@@ -66,7 +66,7 @@
 
 					<div class="total-length-stay">
 						<h5>Tổng thời gian lưu trú</h5>
-						<h5><b>1 đêm</b></h5>
+						<h5><b><%- data.days %> đêm</b></h5>
 					</div>
 
 					<hr>
