--- a/src/views/pages/booking/success.ejs
+++ b/src/views/pages/booking/success.ejs
@@ -91,7 +91,11 @@
 						</div>
 						<div>
 							<span class="material-symbols-outlined">bed</span>
-							<p><%= data[0].book_num_room %> phòng</p>
+							<% var total = 0; %>
+							<% for (var i = 0; i < data.length; i++) { %>
+  								<% total += data[i].book_num_room; %>
+							<% } %>
+							<p><%= total %> phòng</p>
 						</div>
 					</div>
 					<a href="/booking/detail" class="order-btn" role="button">Xem chi tiết</a>
