add more data to rating

--- a/src/views/pages/search/detail.ejs
+++ b/src/views/pages/search/detail.ejs
@@ -120,8 +120,8 @@
 					<div class="time__text">
 						<p class="time__text--top">Thời gian nhận/trả phòng</p>
 						<div class="time__text--bottom">
-							<p>Giờ nhận phòng: Từ 16:00</p>
-							<p>Giờ trả phòng: Trước 16:00</p>
+							<p>Giờ nhận phòng: Từ 12:00</p>
+							<p>Giờ trả phòng: Trước 12:00</p>
 						</div>
 					</div>
 				</div>
@@ -137,13 +137,7 @@
 					<p class="general-info__item--left">
 						Khoảng cách đến trung tâm thành phố
 					</p>
-					<p class="general-info__item--right">100km</p>
-				</div>
-				<div class="general-info__item bg-gray">
-					<p class="general-info__item--left">Điểm đến phổ biến</p>
-					<p class="general-info__item--right">
-						Biển Mỹ Khê, Sân bay quốc tế Đà Nẵng (DAD), Chùa Linh Ứng
-					</p>
+					<p class="general-info__item--right">100m</p>
 				</div>
 				<div class="general-info__item">
 					<p class="general-info__item--left">Bữa sáng</p>
