--- a/src/public/styles/components/search-bar.css
+++ b/src/public/styles/components/search-bar.css
@@ -124,6 +124,7 @@ div.daterangepicker {
     width: 100px;
     height: 40px;
     padding: 10px;
+    margin:5px;
     border: 1px solid var(--dark-gray);
     background: var(--white);
     border-radius: 8px;
