--- a/src/views/pages/booking/information.ejs
+++ b/src/views/pages/booking/information.ejs
@@ -78,7 +78,12 @@
 					</div>
 
 					<div class="cost-total">
-						<h6 class="red-line">VND <%= data.book.cost_before %></h6>
+						<h6 class="red-line">
+							<% if (data.book.cost_before != data.book.cost_after) { %>
+							VND <%= data.book.cost_before %>
+							<% } %>
+							  
+						</h6>
 						<div class="cost">
 							<h1>Giá</h1>
 							<h1>VND <%= data.book.cost_after %></h1>
