Fix bug header and fix search-bar

--- a/src/views/components/search-bar.ejs
+++ b/src/views/components/search-bar.ejs
@@ -37,8 +37,9 @@
 					<span class="plus plus-children">+</span>
 				</div>
 			</div>
+			<div class="overlay" id="overlay"></div>
 
-			<div class="search-quality__room">
+			<div class="search-quality__room" >
 				<span>Phòng</span>
 				<div class="counter--wraper">
 					<span class="minus minus-rooms">-</span>
