--- a/src/public/styles/base.css
+++ b/src/public/styles/base.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0..1,0');
 @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,300,0..1,0');
 @import url('https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css');
+@import url("/styles/components/on-top-btn.css");
 @import url("/styles/partials/nav-tree.css");
 @import url("/styles/partials/footer.css");
 
@@ -203,26 +204,4 @@ button.btn--outlined.sec {
 
 .primary-color-4-text {
 	color: var(--primary-color-4);
-}
-
-#on-top-btn {
-	opacity: 0;
-	position: fixed;
-	right: 10vw;
-	bottom: 10vh;
-	z-index: 999;
-
-	height: 40px;
-	aspect-ratio: 1/1;
-
-	background-color: var(--primary-color-4);
-	color: white;
-
-	outline: none;
-	border: none;
-
-	& .status-layer {
-		margin: 0px;
-		padding: 0px;
-	}
 }
