--- a/src/views/pages/booking/cancellation.ejs
+++ b/src/views/pages/booking/cancellation.ejs
@@ -83,7 +83,7 @@
 						<p>Thông tin lưu trú</p>
 					</div>
 					<div class="cancel-summary__content--text">
-						<p> <%= data[0].book_num_room %> phòng,
+						<p> <%= datax[0].book_num_room %> phòng,
 							<%= data[0].book_num_day %> đêm
 						</p>
 					</div>
