Fix cancel pop up

--- a/src/views/components/cancel-popup.ejs
+++ b/src/views/components/cancel-popup.ejs
@@ -59,37 +59,37 @@
 							<p>Thông tin này là cần thiết để bạn hoàn tất hủy phòng</p>
 							<div class="cancel__option">
 								<div class="form-check">
-									<input class="form-check-input" type="radio" name="option" id="option1" value="Tôi đã tìm được lựa chọn chỗ nghỉ thay thế">
+									<input class="form-check-input" type="radio" name="option" id="option1" value="Tôi đã tìm được lựa chọn chỗ nghỉ thay thế" required>
 									<label class="form-check-label" for="option1">
 										Tôi đã tìm được lựa chọn chỗ nghỉ thay thế
 									</label>
 								</div>
 								<div class="form-check">
-									<input class="form-check-input" type="radio" name="option" id="option2" value="Chỗ nghỉ yêu cầu hủy">
+									<input class="form-check-input" type="radio" name="option" id="option2" value="Chỗ nghỉ yêu cầu hủy" required>
 									<label class="form-check-label" for="option2">
 										Chỗ nghỉ yêu cầu hủy
 									</label>
 								</div>
 								<div class="form-check">
-									<input class="form-check-input" type="radio" name="option" id="option3" value="Số lượng hoặc nhu cầu của tôi có thay đổi">
+									<input class="form-check-input" type="radio" name="option" id="option3" value="Số lượng hoặc nhu cầu của tôi có thay đổi" required>
 									<label class="form-check-label" for="option3">
 										Số lượng hoặc nhu cầu của tôi có thay đổi
 									</label>
 								</div>
 								<div class="form-check">
-									<input class="form-check-input" type="radio" name="option" id="option4" value="Đổi ngày hoặc điểm đến">
+									<input class="form-check-input" type="radio" name="option" id="option4" value="Đổi ngày hoặc điểm đến" required>
 									<label class="form-check-label" for="option4">
 										Đổi ngày hoặc điểm đến
 									</label>
 								</div>
 								<div class="form-check">
-									<input class="form-check-input" type="radio" name="option" id="option5" value=" Lý do cá nhân/chuyến đi bị hủy">
+									<input class="form-check-input" type="radio" name="option" id="option5" value=" Lý do cá nhân/chuyến đi bị hủy" required>
 									<label class="form-check-label" for="option5">
 										Lý do cá nhân/chuyến đi bị hủy
 									</label>
 								</div>
 								<div class="form-check">
-									<input class="form-check-input" type="radio" name="option" id="option6" value="Không phải các lý do trên">
+									<input class="form-check-input" type="radio" name="option" id="option6" value="Không phải các lý do trên" required>
 									<label class="form-check-label" for="option6">
 										Không phải các lý do trên
 									</label>
