--- a/src/views/pages/booking/cancellation.ejs
+++ b/src/views/pages/booking/cancellation.ejs
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 			<div class="cancel__button">
-				<a href="search/<%= data[0].acco_id %>" class="cancel__button--submit1">Đặt lại</a>
+				<a href="/search/<%= data[0].acco_id %>" class="cancel__button--submit1">Đặt lại</a>
 				<a href="/" class="cancel__button--submit2">Tìm chỗ nghỉ khác</a>
 			</div>
 		</section>
