add on-top-btn for all page

--- a/src/views/pages/account/card.ejs
+++ b/src/views/pages/account/card.ejs
@@ -140,6 +140,7 @@
 	<%- include('../../components/success-popup') %>
 	<%- include('../../components/bank-account-popup') %>
 	<%- include('../../components/credit-account-popup') %>
+	<%- include('../../components/on-top-btn') %>
 
 
 	<%- include('../../partials/footer') %>
