--- a/src/views/pages/account/change-password.ejs
+++ b/src/views/pages/account/change-password.ejs
@@ -136,7 +136,8 @@
 
 	<%- include('../../partials/footer.ejs') %>
 	<%- include('../../components/success-popup.ejs') %>
-
+	<%- include('../../components/on-top-btn') %>
+	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<script src="/scripts/account/change-password.js"></script>
 	<script src="/scripts/components/logout-popup.js"></script>
