--- a/src/views/pages/admin/dashboard.ejs
+++ b/src/views/pages/admin/dashboard.ejs
@@ -97,6 +97,8 @@
 
 	</main>
 
+	<%- include('../../components/on-top-btn') %>
+
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 	<script src="/scripts/admin/dashboard.js"></script>
