--- a/src/views/pages/admin/login.ejs
+++ b/src/views/pages/admin/login.ejs
@@ -62,6 +62,7 @@
 	</main>
 
 	<%- include('../../partials/footer') %>
+	<%- include('../../components/on-top-btn') %>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<script src="/scripts/partials/header-small-title.js"></script>
