--- a/src/views/pages/auth/reset.ejs
+++ b/src/views/pages/auth/reset.ejs
@@ -55,6 +55,7 @@
 	</main>
 
 	<%- include('../../partials/footer') %>
+	<%- include('../../components/on-top-btn') %>
 
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
