--- a/src/views/pages/site/about.ejs
+++ b/src/views/pages/site/about.ejs
@@ -72,6 +72,7 @@
 	<div class="mt-12"></div>
 
 	<%- include('../../partials/footer') %>
+	<%- include('../../components/on-top-btn') %>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	<script src="/scripts/base.js"></script>
