--- a/src/views/pages/site/terms-of-use.ejs
+++ b/src/views/pages/site/terms-of-use.ejs
@@ -124,6 +124,7 @@
 	</main>
 
 	<%- include('../../partials/footer.ejs') %>
+	<%- include('../../components/on-top-btn') %>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	<script src="/scripts/base.js"></script>
