--- a/src/public/styles/base.css
+++ b/src/public/styles/base.css
@@ -29,6 +29,7 @@
 	--bg-mint-green: rgba(89, 189, 192, 0.2);
 	--error: #BA1A1A;
 	--red: #ff0000;
+	--red-2: #EA4C2D;
 	--bg-white: #f1f1f1;
 	--gray: #d9d9d9;
 	--gray-o30: rgba(217, 217, 217, 0.3);
