Fix name of partners

--- a/src/views/pages/site/index.ejs
+++ b/src/views/pages/site/index.ejs
@@ -85,8 +85,8 @@
 							<p class="partners__name mt-16">Petroleum Club</p>
 						</div>
 						<div class="partners__item">
-							<img class="partners__logo" src="\imgs\partner__falling_travel.png" alt="Logo Falling Travle">
-							<p class="partners__name mt-16">Falling Travle</p>
+							<img class="partners__logo" src="\imgs\partner__falling_travel.png" alt="Logo Falling Travel">
+							<p class="partners__name mt-16">Falling Travel</p>
 						</div>
 					</div>
 				</div>
