--- a/src/views/pages/account/information.ejs
+++ b/src/views/pages/account/information.ejs
@@ -197,11 +197,12 @@
 	<%- include('../../components/on-top-btn') %>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+	<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> -->
 	<script src="/scripts/account/information.js"></script>
 	<script src="/scripts/partials/search-bar.js"></script>
 	<script src="/scripts/partials/header-medium.js"></script>
 	<script src="/scripts/components/logout-popup.js"></script>
+	<script src="/scripts/partials/header-medium.js"></script>
 	<script src="/scripts/base.js"></script>
 
 </body>
