--- a/src/views/pages/auth/register.ejs
+++ b/src/views/pages/auth/register.ejs
@@ -37,7 +37,7 @@
 			<h1 class="register__title">Đăng ký</h1>
 			<p class="register__note"> Thông tin có dấu <span class="red">*</span> là những thông tin bắt buộc.</p>
 			<!-- thêm action -->
-			<form class="register__form form" action="/auth/login" method="get" id="register-form">
+			<form class="register__form form" id="register-form">
 				<div class="row double">
 					<div class="col">
 						<label for="form__first-name" class="form-label">Họ <span class="red">*</span></label>
