--- a/src/public/styles/pages/auth/register.css
+++ b/src/public/styles/pages/auth/register.css
@@ -2,7 +2,7 @@
 @import url("/styles/partials/header-small-title.css");
 
 body {
-    width: 100vw;
+    /* width: 100; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,6 +19,7 @@ body {
 }
 
 .intro {
+    width: 45%;
     display: inherit;
     flex-direction: column;
     gap: 4.6vh;
@@ -50,6 +51,7 @@ body {
 }
 
 .register {
+    width: 55%;
     box-shadow: 0 1px 8px 0px rgba(0, 0, 0, 0.2), 0 0 6px 0 rgba(0, 0, 0, 0.2);
     border-radius: 12px;
     box-sizing: border-box;
@@ -159,7 +161,7 @@ body {
 
 span.material-symbols-outlined {
     position: absolute;
-    bottom: 28%;
+    top: 12px;
     right: 3%;
     color: var(--primary-color-2);
     cursor: pointer;
