--- a/src/views/pages/booking/payment.ejs
+++ b/src/views/pages/booking/payment.ejs
@@ -186,7 +186,7 @@
 									<div class="account-item clickable">
 										<img src="/imgs/vietcombank.png" alt="" />
 										<div class="name-bank">
-											<h5><%= data.bank_cards.bank_name %></h5>
+											<h5>Vietcombank</h5>
 											<h5 style="text-align: end"><b>*1108</b></h5>
 										</div>
 									</div>
