--- a/src/public/styles/pages/notification/promotion.css
+++ b/src/public/styles/pages/notification/promotion.css
@@ -121,3 +121,18 @@ button.btn--filled.pri {
     padding: 0 24px 0 24px;
     font-weight: 500;
 }
+
+.nofi-empty__img {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top: 32px;
+    gap: 8px;
+}
+
+.nofi-empty__img img {
+    object-fit: contain;
+    width: 20%;
+}
