--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,45 +1,45 @@
 <footer>
-    <div class="footer-container row">
-        <div class="footer-container__contact col-lg-5">
-            <h3>2WAYS.com</h3>
-            <div class="footer-container__intro">
-                <p>Việc đặt phòng của bạn là động lực giúp chúng tôi duy trì được công ty.</p>
-                <p>Bạn có thể liên hệ với chúng tôi thông qua các mạng xã hội.</p>
-            </div>
-            <ul class="footer-container__contact-social">
-                <li><a href="https://daa.uit.edu.vn/"><img class="contact-social__logo" src="/imgs/brands/fb_logo.webp" alt="Logo Facebook"></a></li>
-                <li><a href="https://daa.uit.edu.vn/"><img class="contact-social__logo" src="/imgs/brands/insta_logo.png" alt="Logo Instagram"></a></li>
-                <li><a href="https://daa.uit.edu.vn/"><img class="contact-social__logo" src="/imgs/brands/youtube_logo.png" alt="Logo Youtube"></a></li>
-            </ul>
-        </div>
+	<div class="footer-container row">
+		<div class="footer-container__contact col-lg-5">
+			<h3>2WAYS.com</h3>
+			<div class="footer-container__intro">
+				<p>Việc đặt phòng của bạn là động lực giúp chúng tôi duy trì được công ty.</p>
+				<p>Bạn có thể liên hệ với chúng tôi thông qua các mạng xã hội.</p>
+			</div>
+			<ul class="footer-container__contact-social">
+				<li><a href="https://daa.uit.edu.vn/" target="_blank"><img class="contact-social__logo" src="/imgs/brands/fb_logo.webp" alt="Logo Facebook"></a></li>
+				<li><a href="https://daa.uit.edu.vn/" target="_blank"><img class="contact-social__logo" src="/imgs/brands/insta_logo.png" alt="Logo Instagram"></a></li>
+				<li><a href="https://daa.uit.edu.vn/" target="_blank"><img class="contact-social__logo" src="/imgs/brands/youtube_logo.png" alt="Logo Youtube"></a></li>
+			</ul>
+		</div>
 
-        <div class="footer-container__about col-lg-2">
-            <h3>Công ty</h3>
-            <ul class="footer-container__about-list">
-                <li class="about-list__link"><a href="/about">Về chúng tôi</a></li>
-                <li class="about-list__link"><a href="/about#partner">Thông tin đối tác</a></li>
-            </ul>
-        </div>
-        <div class="footer-container__policy col-lg-2">
-            <h3>Điều khoản</h3>
-            <ul class="footer-container__policy-list">
-                <li class="policy-list__link"><a href="/privacy-policy">Chính sách bảo mật</a></li>
-                <li class="policy-list__link"><a href="/terms-of-use">Điều kiện đặt phòng</a></li>
-                <li class="policy-list__link"><a href="/terms-of-use">Điều khoản chung</a></li>
-            </ul>
-        </div>
+		<div class="footer-container__about col-lg-2">
+			<h3>Công ty</h3>
+			<ul class="footer-container__about-list">
+				<li class="about-list__link"><a href="/about">Về chúng tôi</a></li>
+				<li class="about-list__link"><a href="/about#partner">Thông tin đối tác</a></li>
+			</ul>
+		</div>
+		<div class="footer-container__policy col-lg-2">
+			<h3>Điều khoản</h3>
+			<ul class="footer-container__policy-list">
+				<li class="policy-list__link"><a href="/privacy-policy">Chính sách bảo mật</a></li>
+				<li class="policy-list__link"><a href="/terms-of-use">Điều kiện đặt phòng</a></li>
+				<li class="policy-list__link"><a href="/terms-of-use">Điều khoản chung</a></li>
+			</ul>
+		</div>
 
-        <div class="footer-container__update col-lg-3">
-            <h3>Cập nhật từ chúng tôi</h3>
-            <p>Xác nhận thư điện tử của bạn để nhận được ngay những cập nhật mới nhất từ chúng tôi hàng tuần</p>
-            <div class="footer-container__form">
-                <input type="email" name="email_input" id="email_input" class="form-control update__input-field" placeholder="Email của bạn" required />
-                <button class="btn--filled sec" type="submit">
-                    <div class="status-layer">
-                        <span>Xác nhận</span>
-                    </div>
-                </button>
-            </div>
-        </div>
-    </div>
+		<div class="footer-container__update col-lg-3">
+			<h3>Cập nhật từ chúng tôi</h3>
+			<p>Xác nhận thư điện tử của bạn để nhận được ngay những cập nhật mới nhất từ chúng tôi hàng tuần</p>
+			<div class="footer-container__form">
+				<input type="email" name="email_input" id="email_input" class="form-control update__input-field" placeholder="Email của bạn" required />
+				<button class="btn--filled sec" type="submit">
+					<div class="status-layer">
+						<span>Xác nhận</span>
+					</div>
+				</button>
+			</div>
+		</div>
+	</div>
 </footer>
