--- a/src/views/components/room.ejs
+++ b/src/views/components/room.ejs
@@ -63,7 +63,7 @@
 						<% }) %>
 						<div>
 							<span class="material-symbols-outlined">help</span>
-							<a href="/terms-of-use">Chính sách hủy phòng</a>
+							<a href="/terms-of-use" target="_blank">Chính sách hủy phòng</a>
 						</div>
 					</div>
 
