Add base.js and format code

--- a/src/views/pages/booking/detail.ejs
+++ b/src/views/pages/booking/detail.ejs
@@ -2,6 +2,7 @@
 <html lang="vi">
 
 <head>
+
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#00696d">
@@ -250,6 +251,7 @@
 	<script src="/scripts/components/review-popup.js" defer></script>
 	<script src="/scripts/components/cancel-popup.js" defer></script>
 	<script src="/scripts/booking/detail.js"></script>
+	<script src="/scripts/base.js"></script>
 
 </body>
 
