--- a/src/views/pages/search/detail.ejs
+++ b/src/views/pages/search/detail.ejs
@@ -200,6 +200,7 @@
 	<script src="/scripts/partials/header-medium.js"></script>
 	<script src="/scripts/components/room.js"></script>
 	<script src="/scripts/search/detail.js"></script>
+	<script src="/scripts/base.js"></script>
 
 </body>
 
