--- a/src/views/pages/notifications/promotion.ejs
+++ b/src/views/pages/notifications/promotion.ejs
@@ -2,6 +2,7 @@
 <html lang="vi">
 
 <head>
+
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#00696d">
@@ -60,6 +61,7 @@
 	<script src="/scripts/notifications/promotion.js"></script>
 	<script src="/scripts/partials/search-bar.js"></script>
 	<script src="/scripts/partials/header-medium.js"></script>
+	<script src="/scripts/base.js"></script>
 
 </body>
 
