--- a/src/views/pages/site/error404.ejs
+++ b/src/views/pages/site/error404.ejs
@@ -23,7 +23,13 @@
 		<div class="error-page">
 			<div>
 				<h1 data-h1="404">404</h1>
-				<p data-p="BAD REQUEST">BAD REQUEST</p>
+				<p data-p="Page Not Found">Xin lỗi, chúng tôi không tìm thấy trang mà bạn cần!</p>
+				<div class="error__back-to-home-page">
+					<a href="/" class="btn-back-to-home-page">
+						<p>Quay lại trang chủ 2WAYS.</p>
+						<img src="/imgs/logo.svg" alt="logo" title="Quay lại trang chủ">
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
