--- a/src/public/styles/components/otp.css
+++ b/src/public/styles/components/otp.css
@@ -35,7 +35,7 @@ h1 {
 }
 
 .otp__card {
-	width: 500px;
+	width: 600px;
 	height: 350px;
 	text-align: center;
 	background-color: #ffffff;
@@ -55,7 +55,7 @@ h1 {
 }
 
 .otp__card-input input {
-	width: 45px;
+	width: 60px;
 	height: 60px;
 	font-size: 16px;
 	text-align: center;
@@ -94,6 +94,10 @@ h1 {
 	position: absolute;
 	top: 16px;
 	right: 19px;
+}
+
+.otp__close-btn:hover{
+	cursor: pointer;
 }
 
 .otp__close-btn span {
