--- a/src/views/components/bank-account-popup.ejs
+++ b/src/views/components/bank-account-popup.ejs
@@ -1,12 +1,12 @@
 <div class="modal">
     <div class="account-container">
-        <form class="account" id="account-js" action="/account/card/addBank" method="POST">
+        <form class="account bank-form" id="account-js" action="/account/card/addBank" method="POST">
             <div class="account__card">
                 <h1>Thêm tài khoản ngân hàng</h1>
                 <div class="account__items">
                     <div class="account__item">
                         <h2>Tên ngân hàng:</h2>
-                        <select name="bank_name" class="form-select" aria-label="Default select example">
+                        <select name="bank_name" class="form-select" aria-label="Default select example" >
                             <option selected>Chọn ngân hàng</option>
                             <option value="BIDV">BIDV</option>
                             <option value="Vietcombank">Vietcombank</option>
@@ -18,11 +18,13 @@
 
                     <div class="account__item">
                         <h2>Tên chi nhánh:</h2>
-                        <input name="bank_branch" class="form-control" type="text" placeholder="Chọn tên chi nhánh" />
+                        <input name="bank_branch" class="form-control bank_branch" type="text"
+                            placeholder="Chọn tên chi nhánh"  />
                     </div>
                     <div class="account__item">
                         <h2>Số tài khoản:</h2>
-                        <input name="bank_num" class="form-control" type="text" placeholder="Nhập số tài khoản" />
+                        <input name="bank_num" class="form-control" type="text" placeholder="Nhập số tài khoản" oninput="this.value = this.value.replace(/[^0-9]/g, '');"
+                             />
                     </div>
                     <div class="account__item">
                         <div class="account__item--notice">
@@ -30,11 +32,11 @@
                             <p>(In hoa, không dấu)</p>
                         </div>
                         <input name="bank_name_pers" class="form-control" type="text"
-                            placeholder="Nhập tên chủ tài khoản" />
+                            placeholder="Nhập tên chủ tài khoản"  />
                     </div>
                 </div>
                 <div class="account__button">
-                    <button class="form-button--submit1 ">Hủy</button>
+                    <button class="form-button--submit1" type="button">Hủy</button>
 
                     <button class="form-button--submit2" type="submit">Hoàn thành</button>
                 </div>
