Fix submit button /search/detail

--- a/src/public/styles/pages/search/detail.css
+++ b/src/public/styles/pages/search/detail.css
@@ -221,14 +221,27 @@ body {
     width: 300px;
     font-size: 1.5rem;
     font-weight: 700;
-    color: var(--white);
-    background-color: var(--primary-color-4);
     border-radius: 8px;
     border: none;
 }
 
-.room-list__submit-button:hover {
+.room-list__submit-button:disabled {
+    background-color: var(--mint-grey);
+}
+
+.room-list__submit-button:disabled:hover {
+    cursor: default;
+    box-shadow: none;
+}
+
+.room-list__submit-button:enabled {
     color: var(--white);
+    color: var(--white);
+    background-color: var(--primary-color-4);
+}
+
+.room-list__submit-button:enabled:hover {
+    box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.2), 0 0 2px 0 rgba(0, 0, 0, 0.2);
 }
 
 .general-info {
