--- a/src/views/pages/search/detail.ejs
+++ b/src/views/pages/search/detail.ejs
@@ -104,7 +104,7 @@
 				<% }) %>
 				<h2 class="room-list__local-price">Tổng tiền: <span class="highlight">VND <span class="total-price">0</span></span> <span class="room__unit">/đêm</span></h2>
 				<div class="room-list__submit">
-					<button type="submit" class="room-list__submit-button">Đặt phòng</button>
+					<button type="submit" class="room-list__submit-button" disabled>Đặt phòng</button>
 				</div>
 			</form>
 		</section>
