--- a/src/views/pages/auth/login.ejs
+++ b/src/views/pages/auth/login.ejs
@@ -2,7 +2,6 @@
 <html lang="vi">
 
 <head>
-
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#00696d">
@@ -55,7 +54,7 @@
 				</button>
 			</form>
 
-			<button class="btn login__register" role="button" id="btn-register">Bạn chưa có tài khoản? <span class="highlight">Đăng ký</span></button>
+			<a href="/auth/register" class="btn login__register" role="button" id="btn-register">Bạn chưa có tài khoản? <span class="highlight">Đăng ký</span></a>
 		</section>
 	</main>
 
