--- a/src/public/styles/components/search-result-nsale.css
+++ b/src/public/styles/components/search-result-nsale.css
@@ -29,7 +29,8 @@
     font-size: 20px;
     padding: 0;
     margin: 0;
-    color: orange;
+    color: var(--primary-color-4);
+    font-variation-settings: 'FILL' 1;
 }
 
 .nresult-block__extensions {
