--- a/src/public/styles/components/search-result-sale.css
+++ b/src/public/styles/components/search-result-sale.css
@@ -69,6 +69,7 @@
     padding: 0;
     margin: 0;
     color: var(--primary-color-4);
+    font-variation-settings: 'FILL' 1;
 }
 
 .result-block__extensions {
