--- a/src/public/styles/pages/auth/login.css
+++ b/src/public/styles/pages/auth/login.css
@@ -126,6 +126,11 @@
     padding-top: 10px;
 }
 
+.login__register:hover {
+    border: 1px solid var(--primary-color-4);
+    box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.2), 0 0 2px 0 rgba(0, 0, 0, 0.2);
+}
+
 .highlight {
     color: var(--primary-color-4);
 }
