--- a/src/public/styles/pages/auth/register.css
+++ b/src/public/styles/pages/auth/register.css
@@ -179,3 +179,8 @@ span.material-symbols-outlined {
 .form-control.is-invalid {
     background-image: none;
 }
+
+.register__login:hover {
+    border: 1px solid var(--primary-color-4);
+    box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.2), 0 0 2px 0 rgba(0, 0, 0, 0.2);
+}
