--- a/src/views/pages/auth/register.ejs
+++ b/src/views/pages/auth/register.ejs
@@ -2,7 +2,6 @@
 <html lang="vi">
 
 <head>
-
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#00696d">
@@ -85,8 +84,7 @@
 			</form>
 
 			<a href="/auth/login" class="btn register__login" role="button">Bạn đã có tài khoản? <span class="highlight">Đăng nhập</span></a>
-			<p class="register__confirm">
-				Bằng việc đăng ký, bạn đã đồng ý với 2WAYS về <br>
+			<p class="register__confirm">Bằng việc đăng ký, bạn đã đồng ý với 2WAYS về<br>
 				<a href="/terms-of-use">điều khoản dịch vụ</a> và
 				<a href="/privacy-policy">chính sách bảo mật</a>.
 			</p>
