--- a/src/views/pages/site/terms-of-use.ejs
+++ b/src/views/pages/site/terms-of-use.ejs
@@ -36,7 +36,7 @@
 			<p>Khách/Đối Tác đồng ý và thừa nhận rằng bằng việc gửi cho 2WAYS yêu cầu đặt phòng, yêu cầu sự kiện và/hoặc
 				các dịch vụ bổ sung (gọi chung là <span class="highlight">“Yêu Cầu Dịch Vụ”</span>) và được 2WAYS xác nhận dịch vụ là Khách và Đối Tác đã đọc
 				và chấp nhận ĐKC. Những thay đổi ĐKC tại từng thời điểm được đăng tải trên
-				trang web chính thức của 2WAYS tại địa chỉ <a href="#"></a>.</p>
+				trang web chính thức của 2WAYS.</p>
 			<p>ĐKC là một phần không thể tách rời của hợp đồng, thỏa thuận cung cấp, sử dụng dịch vụ hoặc Yêu Cầu Dịch Vụ được xác nhận giữa 2WAYS và Khách /Đối Tác.</p>
 			</section>
 
@@ -94,7 +94,7 @@
 						đó có nguyên nhân là do sự kiện Bất khả kháng. Sự kiện Bất Khả Kháng bao gồm nhưng không hạn chế:
 						Bão lụt, động đất, chiến tranh, hoả hoạn, sự thay đổi của chính sách, pháp luật của nhà nước hoặc các
 						sự kiện khách quan khác.</p>
-					<p style="font-style: italic;">Với điều kiện:</p>
+					<p><i>Với điều kiện:</i></p>
 					<li>Sự kiện đó hoàn toàn nằm ngoài sự kiểm soát hợp lý hoặc không do lỗi hoặc sơ suất của Bên bị ảnh hưởng
 						bởi sự kiện Bất Khả Kháng, mặc dù Bên đó đã áp dụng mọi biện pháp cần thiết và trong khả năng cho phép
 						để đề phòng, khắc phục hoặc giảm bớt thiệt hại, gây ra việc chậm trễ hoặc gián đoạn, đình trệ việc
